# periscan

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  fingerprints.py  merge_checks.py  periscan.py  pyproject.toml  requirements.txt  webapp.py
.github/workflows/: ci.yml  docker.yml
tests/: test_periscan.py
